@@ -24,6 +24,7 @@ Enhancements:
 - mc: use an implicit minimum allocated length
 Changes:
 - option: remove struct HXoptcb.arg0
+- option: remove struct HXoptcb.match_{ln,sh} by .flags
 - string: unline HX_strdup, HX_strlcat, HX_strlcpy, HX_strnlcat
 
 
